[tool.poetry]
name = "assessment-20250322"
version = "0.1.0"
description = "Probability prediction based on soccer event data"
authors = ["thomasregos"]
readme = "README.md"
packages = [{include = "assessment_20250322"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.4"
ipykernel = "^6.29.5"
mplsoccer = "^1.4.0"
scikit-learn = "^1.6.1"
hdbscan = "^0.8.40"
hyperopt = "^0.2.7"
umap-learn = "^0.5.7"
xgboost = "^3.0.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
